// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginLayout Snapshots should match snapshot 1`] = `
<div
  class="loginLayout ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-stretch ant-flex-justify-space-between ant-flex-vertical"
>
  <div
    class="header ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-center ant-flex-justify-space-between"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-center"
      style="gap: 10px;"
    >
      <img
        alt="Document Atom"
        data-nimg="1"
        decoding="async"
        height="45"
        loading="lazy"
        src="/_next/image?url=%2Fassets%2Flogo.png&w=96&q=75"
        srcset="/_next/image?url=%2Fassets%2Flogo.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Flogo.png&w=96&q=75 2x"
        style="color: transparent;"
        width="45"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-1d4w9r2"
        style="font-size: 20px;"
      >
        Document Atom
      </span>
    </div>
    <svg
      color="black"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="cursor: pointer; transform: rotate(90deg);"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <mask
        id="circle-mask-10"
      >
        <rect
          fill="white"
          height="100%"
          width="100%"
          x="0"
          y="0"
        />
        <circle
          fill="black"
          r="9"
        />
      </mask>
      <circle
        cx="12"
        cy="12"
        fill="black"
        mask="url(#circle-mask-10)"
      />
      <g
        stroke="currentColor"
        style="opacity: 1;"
      >
        <line
          x1="12"
          x2="12"
          y1="1"
          y2="3"
        />
        <line
          x1="12"
          x2="12"
          y1="21"
          y2="23"
        />
        <line
          x1="4.22"
          x2="5.64"
          y1="4.22"
          y2="5.64"
        />
        <line
          x1="18.36"
          x2="19.78"
          y1="18.36"
          y2="19.78"
        />
        <line
          x1="1"
          x2="3"
          y1="12"
          y2="12"
        />
        <line
          x1="21"
          x2="23"
          y1="12"
          y2="12"
        />
        <line
          x1="4.22"
          x2="5.64"
          y1="19.78"
          y2="18.36"
        />
        <line
          x1="18.36"
          x2="19.78"
          y1="5.64"
          y2="4.22"
        />
      </g>
    </svg>
  </div>
  <div
    class="content"
  >
    <div>
      Test Content
    </div>
  </div>
  <div
    class="footer ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-center ant-flex-justify-center"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-1d4w9r2"
      style="color: rgb(193, 193, 193);"
    />
  </div>
</div>
`;

exports[`LoginLayout Snapshots should match snapshot in dark mode 1`] = `
<div
  class="loginLayout ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-stretch ant-flex-justify-space-between ant-flex-vertical"
>
  <div
    class="header ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-center ant-flex-justify-space-between"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-center"
      style="gap: 10px;"
    >
      <img
        alt="Document Atom"
        data-nimg="1"
        decoding="async"
        height="45"
        loading="lazy"
        src="/_next/image?url=%2Fassets%2Flogo.png&w=96&q=75"
        srcset="/_next/image?url=%2Fassets%2Flogo.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Flogo.png&w=96&q=75 2x"
        style="color: transparent;"
        width="45"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-1d4w9r2"
        style="font-size: 20px;"
      >
        Document Atom
      </span>
    </div>
    <svg
      color="white"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="cursor: pointer; transform: rotate(40deg);"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <mask
        id="circle-mask-11"
      >
        <rect
          fill="white"
          height="100%"
          width="100%"
          x="0"
          y="0"
        />
        <circle
          fill="black"
          r="9"
        />
      </mask>
      <circle
        cx="12"
        cy="12"
        fill="white"
        mask="url(#circle-mask-11)"
      />
      <g
        stroke="currentColor"
        style="opacity: 0;"
      >
        <line
          x1="12"
          x2="12"
          y1="1"
          y2="3"
        />
        <line
          x1="12"
          x2="12"
          y1="21"
          y2="23"
        />
        <line
          x1="4.22"
          x2="5.64"
          y1="4.22"
          y2="5.64"
        />
        <line
          x1="18.36"
          x2="19.78"
          y1="18.36"
          y2="19.78"
        />
        <line
          x1="1"
          x2="3"
          y1="12"
          y2="12"
        />
        <line
          x1="21"
          x2="23"
          y1="12"
          y2="12"
        />
        <line
          x1="4.22"
          x2="5.64"
          y1="19.78"
          y2="18.36"
        />
        <line
          x1="18.36"
          x2="19.78"
          y1="5.64"
          y2="4.22"
        />
      </g>
    </svg>
  </div>
  <div
    class="content"
  >
    <div>
      Test Content
    </div>
  </div>
  <div
    class="footer ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-center ant-flex-justify-center"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-1d4w9r2"
      style="color: rgb(193, 193, 193);"
    />
  </div>
</div>
`;
